src/app/user/user-nav/user-nav.component.scss
.user-nav {
  box-shadow: inset 0 -1px 0 var(--color-separator);

  button {
    margin: 0 1rem;
    padding: 0.5rem 0;
    border: none;
    background: white;
    color: var(--color-inactive);
    font-size: 1rem;
    font-weight: 500;

    &.active {
      border-bottom: solid 2px var(--color-active);
      color: var(--color-active);
    }
  }
}

